--- a/java/workspace_sts/spring/src/main/webapp/WEB-INF/web.xml
+++ b/java/workspace_sts/spring/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,9 @@
 	<!-- Processes application requests -->
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
+		<!-- 이 클래스의  -->
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<!-- 초기값을 이렇게 설정 -->
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
@@ -26,8 +28,10 @@
 	</servlet>
 		
 	<servlet-mapping>
+		<!-- appServlet이름을 가진 서블릿으로 보내주는것 그게 바로 위의 서블릿.  -->
 		<servlet-name>appServlet</servlet-name>
+		<!-- 모든 요청이 들어오면,appservlet으로 보내주는것 -->
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-
+	<!-- 이렇게 맵핑된애들은 WEB-INF/spring/appserver/servlet-context.xml에 적힌다. -->
 </web-app>
