--- a/java/workspace_sts/spring/src/main/webapp/WEB-INF/web.xml
+++ b/java/workspace_sts/spring/src/main/webapp/WEB-INF/web.xml
@@ -34,7 +34,7 @@
 		</init-param>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>chapter05.MVCConfig</param-value>
+			<param-value>chapter05.MVCConfig,chapter07.MVCConfig</param-value>
 		</init-param>
 		
 		<load-on-startup>1</load-on-startup>
