--- a/java/workspace_sts/spring/src/main/webapp/WEB-INF/web.xml
+++ b/java/workspace_sts/spring/src/main/webapp/WEB-INF/web.xml
@@ -39,7 +39,7 @@
 		</init-param>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>chapter11.MVCConfig</param-value>
+			<param-value>chapter10_utilTest.MVCConfig</param-value>
 		</init-param>
 		
 		<load-on-startup>1</load-on-startup>
